[tool.poetry]
name = "article-summarization"
version = "0.1.0"
description = "Explore summarization of news articles with language models, and create a dataset for evaluation"
authors = ["Giorgio Nicoli <nic.giorgio1992@gmail.com>"]
readme = "README.md"
packages = [{include = "article_summarization"}]

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "^4.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
